fix frontend: removed scrollbars on sidebar and popup if not necessary

--- a/src/serve/styles/general.css
+++ b/src/serve/styles/general.css
@@ -142,7 +142,7 @@ button:disabled {
   align-items: center;
 
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   
   hr {
     width: 100%;
@@ -338,7 +338,7 @@ button:disabled {
   border-radius: 10px;
 
   max-height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   background-color: #36435c;
 }
